Made video on homepage responsive, small spacing fixes on responsive to pilot page

--- a/src/sass/partials/_index.scss
+++ b/src/sass/partials/_index.scss
@@ -101,13 +101,13 @@
     }
   }
 
-  .pilot-video {
-    iframe {
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-    }
-  }
+  // .pilot-video {
+  //   iframe {
+  //     display: block;
+  //     margin-left: auto;
+  //     margin-right: auto;
+  //   }
+  // }
 
   .storytelling-section {
     .header-links {
