--- a/src/sass/partials/_pilot.scss
+++ b/src/sass/partials/_pilot.scss
@@ -99,9 +99,12 @@
     color: black;
     display: block;
     font-family: "Lato", sans-serif;
-    font-size: 14px;
+    font-size: 12px;
     text-align: center;
     width: 100%;
+    @include mq($from: tablet) {
+      font-size: 14px;
+    }
 
     &:hover {
       color: #f9c02e;
